--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@trpc/react-query": "^11.4.3",
 		"@trpc/server": "^11.4.3",
 		"@trpc/tanstack-react-query": "^11.4.3",
+		"better-auth": "^1.4.7",
 		"clsx": "^2.1.1",
 		"next": "15.4.8",
 		"next-sanity": "^9.12.0",
